--- a/src/main/resources/application.properties.tmpl
+++ b/src/main/resources/application.properties.tmpl
@@ -28,7 +28,7 @@ deepgreen.apiKey={YOUR_API_KEY}
 deepgreen.apiUser={YOUR_API_USERNAME}
 deepgreen.apiPassword={YOUR_API_PASSWORD}
 
-# DEVELOPMENT PROPERTIES (if enabled, disable production properties)
+# DEVELOPMENT PROPERTIES (for dev server)
 # -----------------------------------------------------------------------------
 deepgreen.baseURL={API_URL_TO_DEV_SERVER}
 deepgreen.resourceURL={API_URL_TO_DEV_SERVER}/resource
@@ -36,13 +36,13 @@ deepgreen.frlURL={API_URL_TO_DEV_SERVER}/resource/frl
 deepgreen.elasticsearchURL={API_URL_TO_DEV_SERVER}/search/frl2/_search
 attr.isDescribedBy.createdBy=39
  
-# PRODUCTION PROPERTIES (if enabled, disable development properties)
+# PRODUCTION PROPERTIES (for prod server)
 # -----------------------------------------------------------------------------
-#deepgreen.baseURL={API_URL_TO_PROD_SERVER}
-#deepgreen.resourceURL={API_URL_TO_PROD_SERVER}/resource
-#deepgreen.frlURL={API_URL_TO_PROD_SERVER}/resource/frl
-#deepgreen.elasticsearchURL={API_URL_TO_PROD_SERVER}/search/frl2/_search
-#attr.isDescribedBy.createdBy=322
+deepgreen.baseURL={API_URL_TO_PROD_SERVER}
+deepgreen.resourceURL={API_URL_TO_PROD_SERVER}/resource
+deepgreen.frlURL={API_URL_TO_PROD_SERVER}/resource/frl
+deepgreen.elasticsearchURL={API_URL_TO_PROD_SERVER}/search/frl2/_search
+attr.isDescribedBy.createdBy=322
 
 # MODIFIER
 # -----------------------------------------------------------------------------
