added XMLFilesPath to store xml files

--- a/src/main/resources/application.properties.tmpl
+++ b/src/main/resources/application.properties.tmpl
@@ -11,6 +11,7 @@
 # -----------------------------------------------------------------------------
 deepgreen.tmpDirPath=/tmp/deepgreen
 deepgreen.zipFilePath=/tmp/deepgreen/zip
+deepgreen.xmlFilesPath=/tmp/deepgreen/xml
 
 # DATABASE ACCESS
 # -----------------------------------------------------------------------------
